# lmeval

./: .gitignore  CHANGELOG.md  FAQ.md  README.md  env_template  pyproject.toml
.github/workflows/: publish.yml
cookbook/: hello_world.ipynb  quick_receipts.ipynb
lmeval/: __init__.py  benchmark.py  benchmark_test.py  callback.py  end_to_end_test.py  enums.py  enums_test.py  evaluation_tasks.py  evaluator.py  fixtures.py  logger.py  media.py  question.py  system_config.py  task.py  template_engine.py  utils.py
lmeval/archive/: __init__.py  archive.py  crypto.py  lmdb_archive.py  lmdb_archive_test.py  sqlite_archive.py
lmeval/cli/: ui_headtohead.py  ui_singlemodel.py
lmeval/models/: __init__.py  gemini.py  gemini_test.py  httpmodel.py  litellm.py  litellm_model.py  litellm_test.py  lmmodel.py  lmmodel_test.py  mock_model.py  ollama.py  ollama_test.py  openai.py  openai_test.py  tests_utils.py  vertex.py  vertex_test.py
lmeval/prompts/: __init__.py  adversarial_prompts.py  boolean_prompt_prompt.py  boolean_prompts.py  multi_choices_prompts.py  multi_choices_prompts_test.py  multiple_choices_prompt.py  prompt.py  prompt_tests.py  text_generation_prompts.py  text_generation_prompts_test.py
lmeval/regression_testing/: fixtures.py  test_end_to_end.py  test_evaluator.py  test_fixtures.py
lmeval/scorers/: __init__.py  boolean_answer.py  boolean_test.py  contain_text.py  containt_text_test.py  dummy_scorer.py  dummy_test.py  exact_text.py  exact_text_test.py  loader.py  loader_test.py  multiple_choices.py  multiple_choices_test.py  punt_detector.py  punt_detector_test.py  regex.py  regex_test.py  scorer.py  utils.py
lmeval/vizualization/: __init__.py  punting.py
notebooks/: hello_world.ipynb
notebooks/data/: demo_benchmark.db
