[project]
name = "lmeval"
version = "0.8.0"
description = "LMEval: Large Model Evaluation Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "immutabledict>=4.2.0",
    "litellm>=1.46.8",
    "lmdb>=1.5.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "tink>=1.10.0",
]
[project.optional-dependencies]
vertex = ["google-cloud-aiplatform>=1.67.1"]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]

[tool.setuptools]
packages = ["lmeval"]
