[project]
name = "lmeval"
version = "0.11.0"
description = "LMEval: Large Model Evaluation Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.7.1",
    "immutabledict>=4.2.0",
    "ipykernel>=6.29.5",
    "litellm>=1.46.8",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "openai>=1.47.0",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "tink>=1.10.0",
    "typer>=0.15.1",
]

[project.optional-dependencies]
vertex = ["google-cloud-aiplatform>=1.67.1"]

[project.scripts]
lmevalboard = "lmeval.cli.evalboard:main"


[tool.uv]
dev-dependencies = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]

[tool.setuptools]
packages = ["lmeval"]
